--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,8 @@
 
       <div id="stage">
         <div id="clues">
+        </div>
+        <div id="questionresultarea">
         </div>
         <div id="answers">
         </div>
@@ -44,11 +46,6 @@
         </div>
         <div id="finalscorearea">
           <div id="finalscore"></div>
-          <div id="playagain">
-            <a onclick="App.reset();" class="btn btn-primary btn-large">
-              Play Again
-            </a>
-          </div>
         </div>
         <div id="stats">
           <div id="question">
@@ -66,16 +63,35 @@
       </div>
 
       <footer>
-        <div class="copyright clear">
+        <div class="copyright">
           Copyright &copy; 2014 <a href="https://twitter.com/ben_deane">Ben Deane</a>.
         </div>
         <div class="socialbox">
           <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+          <fb:share-button href="http://www.elbeno.com/guessthelement/" type="button_count"></fb:share-button>
+          <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="http://www.elbeno.com/guessthelement/"></div>
         </div>
       </footer>
     </div>
 
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    <!-- Place this tag after the last +1 button tag. -->
+    <script type="text/javascript">
+      (function() {
+      var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+      po.src = 'https://apis.google.com/js/platform.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
+    </script>
+
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
     <script src="jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="bootstrap.min.js" type="text/javascript"></script>
