--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="ui-progress-bar.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="index.css" media="screen" rel="stylesheet" type="text/css" />
 
+    <link rel="icon" type="image/png" href="favicon.png"/>
+
   </head>
   <body>
     <div id="fb-root"></div>
