--- a/index.html
+++ b/index.html
@@ -46,29 +46,14 @@
 
       <div id="barcontainer">
         <div class="ui-progress-bar ui-container" id="progress_bar">
-          <div class="ui-progress" style="width: 100%;">
-          </div>
+          <div class="ui-progress" style="width: 100%;"></div>
         </div>
       </div>
 
       <div id="scorearea">
-        <div id="spacer"></div>
-        <div id="finalscorearea">
-          <div id="finalscore"></div>
-        </div>
-        <div id="stats">
-          <div id="question">
-          </div>
-          <div id="score">
-            <h2>Score:</h2><div id="score"></div>
-          </div>
-          <div id="lives">
-            <h2>Lives:</h2><div id="lives"></div>
-          </div>
-          <div id="streak">
-            <h2>Streak:</h2><div id="streak"></div>
-          </div>
-        </div>
+        <div id="question"></div>
+        <div id="score"></div>
+        <div id="modestat"></div>
       </div>
 
       <footer>
