--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
         <div class="socialbox">
           <div id="plusoneit" style="float:right;">
-            <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="200" data-href="http://www.elbeno.com/guessthelement/"></div>
+            <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="200" data-href="http://www.elbeno.com/guesstheelement/"></div>
           </div>
           <div id="fbshareit" style="float:right; width:118px;">
-            <fb:share-button href="http://www.elbeno.com/guessthelement/" type="button_count"></fb:share-button>
+            <fb:share-button href="http://www.elbeno.com/guesstheelement/" type="button_count"></fb:share-button>
           </div>
           <div id="tweetit" style="float:right;">
             <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
